--- a/ClientApp/src/components/HomeView.css
+++ b/ClientApp/src/components/HomeView.css
@@ -50,8 +50,9 @@ input[type='number'] {
   background-color: #f2f2f2;
   border-color: #ccc;
   border-width: 0.055em;
-  border-radius: 0.25em;
-  border-style: solid;
+
+  border-top-style: solid;
+  border-bottom-style: solid;
 
   padding: 1em 1em 0.5em 1em;
 }
@@ -75,4 +76,30 @@ input[type='number'] {
 
 .asset-item-actions > button + button {
   margin-left: 0.5em;
+}
+
+.asset-item-actions:last-of-type {
+  margin-right: 1em;
+}
+
+.card {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+@media screen and (min-width: 550px) {
+  .card {
+    padding-left: 2.5em;
+    padding-right: 2.5em;
+  }
+
+  .asset-item-actions:last-of-type {
+    margin-right: 0;
+  }
+
+  .asset-item-container {
+    border-left-style: solid;
+    border-right-style: solid;
+    border-radius: 0.25em;
+  }
 }
