--- a/ClientApp/src/components/Style.css
+++ b/ClientApp/src/components/Style.css
@@ -128,7 +128,7 @@ input[type='password'] {
   width: 100%;
   border-style: solid;
   border-width: 1px;
-  border-color: #ddd;
+  border-color: #ccc;
   color: #000;
   font-size: 1.25em;
   border-radius: 0.25em;
