--- a/ClientApp/src/components/Style.css
+++ b/ClientApp/src/components/Style.css
@@ -122,6 +122,10 @@
   justify-content: space-between;
 }
 
+input {
+  font-size: 1em;
+}
+
 input[type='email'],
 input[type='text'],
 input[type='password'] {
@@ -130,7 +134,7 @@ input[type='password'] {
   border-width: 1px;
   border-color: #ccc;
   color: #000;
-  font-size: 1.25em;
+  font-size: 1em;
   border-radius: 0.25em;
   padding: 0.65em 1em;
 }
