Update document page to support loading indicators

--- a/ClientApp/src/components/HomeView.css
+++ b/ClientApp/src/components/HomeView.css
@@ -83,7 +83,7 @@ input[type='number'] {
   margin-right: 1em;
 }
 
-.card {
+.card-content {
   padding-left: 0;
   padding-right: 0;
 }
@@ -96,7 +96,7 @@ input[type='number'] {
 }
 
 @media screen and (min-width: 550px) {
-  .card {
+  .card-content {
     padding-left: 2.5em;
     padding-right: 2.5em;
   }
