--- a/ClientApp/src/components/Style.css
+++ b/ClientApp/src/components/Style.css
@@ -22,8 +22,12 @@
   border-radius: 10px;
   box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1);
   text-align: center;
-  padding: 2.5em;
   margin: 2.5em;
+  overflow: hidden;
+}
+
+.card-content {
+  padding: 2.5em;
 }
 
 .button {
