Replace all references to ParityUI with ParityService

--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using ParityUI
-@namespace ParityUI.Pages
+@using ParityService
+@namespace ParityService.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
